--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "enhancement": "node ./src/enhancement.js",
     "readability": "node ./src/readability.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
